src/compiletest/qcell-01.stderr
error[E0599]: no method named `clone` found for struct `qcell::QCellOwner` in the current scope
   --> $DIR/qcell-01.rs:8:25
    |
8   |     let owner2 = owner1.clone();  // Compile fail
    |                         ^^^^^ method not found in `qcell::QCellOwner`
    |
   ::: $RUST/src/libcore/clone.rs:122:8
    |
122 |     fn clone(&self) -> Self;
    |        -----
    |        |
    |        the method is available for `std::sync::Arc<qcell::QCellOwner>` here
    |        the method is available for `std::rc::Rc<qcell::QCellOwner>` here
